
# Keep translatable entries in sync with:
#   FILE list in vivapp/bin/gettext/update-chromium.sh
#   filemap in app/resources/po2xtb_batch.py
import("//services/screen_ai/buildflags/features.gni")

if (is_ios) {
  import("//ios/build/chrome_build.gni")
}

CHROMIUM_VIVALDI_RESOURCE_LIST = [
  [
    "//ui/strings:ui_strings",
    "//vivaldi/app/resources/ui_strings/vivaldi_ui_strings.grd",
    {
      translation_dir_setting = "translations"
      pak_file_prefix="ui_strings_"
      source = "ui_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      vivaldi_file_prefix="vivaldi_ui_strings_"
    },
  ],
  [
    "//components/resources:components_resources",
    "//vivaldi/app/resources/components_resources/vivaldi_components.grd",
    {
      have_strings_flag = false
      merge_extra_grit_defines = ["-D", "vivaldi_chromium_file=false"]
    },
  ],
  [
    "//components/version_ui/resources:resources",
    "//vivaldi/app/resources/components_resources/vivaldi_about.grd",
    {
      have_strings_flag = false
      merge_extra_grit_defines = ["-D", "vivaldi_chromium_file=false"]
    },
  ],
  [
    "//components/strings:components_strings",
    "//vivaldi/app/resources/components_strings/vivaldi_components_strings.grd",
    {
      translation_dir_setting = "strings"
      # Need enable_screen_ai_service her because it was removed from the default list
      merge_extra_grit_defines = ["-D", "enable_screen_ai_service=$enable_screen_ai_service"]
      pak_file_prefix="components_strings_"
      source = "../components_strings.grd"
    },
  ],
  [
    "//components/strings:components_branded_strings",
    "//vivaldi/app/resources/components/vivaldi_components.grd",
    {
      translation_dir_setting = "strings"
      merge_extra_grit_defines = ["-D", "vivaldi_chromium_file=false"]
      pak_file_prefix="components_google_chrome_strings_"
      source = "../components_google_chrome_strings.grd"
      vivaldi_file_prefix="vivaldi_components_"
    },
  ],
  [
    "//components/strings:components_locale_settings",
    "//vivaldi/app/resources/components_locale_settings/vivaldi_components_locale_settings.grd",
    {
      translation_dir_setting = "strings"
      pak_file_prefix="components_locale_settings_"
      source = "../components_locale_settings.grd"
      no_override_locales=true
    },
  ],
  [
    "//components/resources:components_scaled_resources",
    "//vivaldi/app/resources/components_scaled/vivaldi_components_scaled.grd",
    {
      have_strings_flag = false
    },
  ],
]

if(!is_ios) {
  CHROMIUM_VIVALDI_RESOURCE_LIST += [
    [
      "//chrome/app:generated_resources",
      "//vivaldi/app/resources/generated/vivaldi_generated_resources.grd",
      {
        pak_file_prefix="generated_resources_"
        source = "generated_resources.grd"
        translation_dir_setting = "resources"
        vivaldi_translation_dir_setting = "strings"
      },
    ],
    [
      "//chrome/app:branded_strings",
      "//vivaldi/app/resources/strings/vivaldi_strings.grd",
      {
        merge_extra_grit_defines = ["-D", "vivaldi_chromium_file=false"]
        translation_dir_setting = "resources"
        pak_file_prefix="google_chrome_strings_"
        source = "google_chrome_strings.grd"
        vivaldi_translation_dir_setting = "strings"
        vivaldi_file_prefix="vivaldi_strings_"
      },
    ],
    [
      "//chrome/app/resources:locale_settings",
      "//vivaldi/app/resources/locale/vivaldi_locale_strings.grd",
      {
        have_strings_flag = false
      },
    ],
    [
      "//chrome/app/resources:platform_locale_settings",
      "//vivaldi/app/resources/platform_locale_settings/vivaldi_platform_locale_settings.grd",
      {
        have_strings_flag = false
        pak_file_prefix="platform_locale_settings_"
        add_mobile_locales = true
      },
    ],
    [
      "//chrome/app/theme:chrome_unscaled_resources",
      "//vivaldi/app/resources/theme/vivaldi_unscaled_resources.grd",
      {
        have_strings_flag = false
      },
    ],
    [
      "//chrome/app/theme:theme_resources",
      "//vivaldi/app/resources/theme/vivaldi_theme.grd",
      {
        have_strings_flag = false
      },
    ],
    [
      "//chrome/renderer:resources",
      "//vivaldi/app/resources/renderer/vivaldi_renderer_resources.grd",
      {
        have_strings_flag = false
      },
    ],
    [
      "//ui/resources:ui_resources_grd",
      "//vivaldi/app/resources/ui/vivaldi_ui_resources.grd",
      {
        have_strings_flag = false
      },
    ],
    [
      "//ui/resources:webui_resources_grd",
      "//vivaldi/app/resources/webui_resources/vivaldi_webui_resources.grd",
      {
        have_strings_flag = false
      },
    ],
    [
      "//third_party/blink/public/strings:strings",
      "//vivaldi/app/resources/content/vivaldi_content_strings.grd",
      {
        translation_dir_setting = "translations"
        pak_file_prefix="blink_strings_"
        source = "blink_strings.grd"
        vivaldi_translation_dir_setting = "strings"
        vivaldi_file_prefix="vivaldi_content_strings_"
      },
    ],
  ]

  if(!is_android) {
    CHROMIUM_VIVALDI_RESOURCE_LIST += [
      [
        "//chrome/browser/resources/signin/profile_picker:resources",
        "//vivaldi/app/resources/profile_picker/vivaldi_profile_picker.grd",
        {
          have_strings_flag = false
        },
      ],
      [
        "//chrome/browser/resources/signin:resources",
        "//vivaldi/app/resources/signin/vivaldi_signin.grd",
        {
          have_strings_flag = false
        },
      ],
    ]
  }
}

ANDROID_VIVALDI_RESOURCE_LIST = [
  [
    "//chrome/browser/ui/android/strings:ui_strings_grd__grit",
    "//vivaldi/app/resources/android/vivaldi_android_chrome_strings.grd",
    {
      have_strings_flag = true
      translation_dir_setting = "translations"
      pak_file_locale_prefix="values-"
      pak_file_prefix="android_chrome_strings"
      pak_file_extension = "xml"
      source = "android_chrome_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      string_file_prefix="android_chrome_strings_"
    },
  ],
  [
    "//components/browser_ui/strings/android:browser_ui_strings_grd__grit",
    "//vivaldi/app/resources/android-browser-ui/vivaldi_browser_ui_string.grd",
    {
      have_strings_flag = true
      translation_dir_setting = "translations"
      pak_file_locale_prefix="values-"
      pak_file_prefix="browser_ui_strings"
      pak_file_extension = "xml"
      source = "browser_ui_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      string_file_prefix="browser_ui_strings_"
    },
  ],
  [
    "//components/permissions/android:permissions_strings_grd",
    "//vivaldi/app/resources/android-permissions/vivaldi_android_permissions_strings.grd",
    {
      have_strings_flag = true
      translation_dir_setting = "translations"
      pak_file_locale_prefix="values-"
      pak_file_prefix="permissions_android_strings"
      pak_file_extension = "xml"
      source = "permissions_android_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      string_file_prefix="permissions_android_strings_"
      java_grd_name = true
    },
  ],
  [
    "//chrome/android/features/tab_ui:java_strings_grd__grit",
    "//vivaldi/app/resources/android-tab-ui/vivaldi_android_chrome_tab_ui_strings.grd",
    {
      have_strings_flag = true
      translation_dir_setting = "java/strings/translations"
      pak_file_locale_prefix="values-"
      pak_file_prefix="android_chrome_tab_ui_strings"
      pak_file_extension = "xml"
      source = "java/strings/android_chrome_tab_ui_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      string_file_prefix="android_chrome_tab_ui_strings_"
    },
  ],
  [
    "//components/webapps/browser/android:webapps_strings_grd__grit",
    "//vivaldi/app/resources/android_webapps/vivaldi_android_webapps_strings.grd",
    {
      have_strings_flag = true
      translation_dir_setting = "java/strings/translations"
      pak_file_locale_prefix="values-"
      pak_file_prefix="android_webapps_strings"
      pak_file_extension = "xml"
      source = "android_webapps_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      string_file_prefix="android_webapps_strings_"
    },
  ],
]

IOS_VIVALDI_RESOURCE_LIST = [
  [
    "//ios/chrome/app/strings:ios_branded_strings",
    "//vivaldi/app/resources/ios_branding_strings/vivaldi_ios_branding_strings.grd",
    {
      translation_dir_setting = "resources"
      pak_file_prefix="ios_google_chrome_strings_"
      source = "ios_google_chrome_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      vivaldi_file_prefix="vivaldi_ios_branding_strings_"
    },
  ],
  [
    "//ios/chrome/app/strings:ios_strings",
    "//vivaldi/app/resources/ios_strings/vivaldi_ios_strings.grd",
    {
      translation_dir_setting = "resources"
      pak_file_prefix="ios_strings_"
      source = "ios_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      vivaldi_file_prefix="vivaldi_ios_strings_"
      add_mobile_locales = true
      extra_locale=["af"]
    },
  ],
  [
    "//ios/chrome/widget_kit_extension/strings:strings",
    "//vivaldi/app/resources/ios_widget_kit_extension_strings/vivaldi_ios_widget_kit_extension_strings.grd",
    {
      translation_dir_setting = "resources"
      pak_file_prefix="ios_widget_kit_extension_strings_"
      source = "ios_widget_kit_extension_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      vivaldi_file_prefix="vivaldi_ios_widget_kit_extension_strings_"
    },
  ],
  [
    "//ios/chrome/share_extension/strings:strings",
    "//vivaldi/app/resources/ios_share_extension_strings/vivaldi_ios_share_extension_strings.grd",
    {
      translation_dir_setting = "resources"
      pak_file_prefix="ios_share_extension_strings_"
      source = "ios_share_extension_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      vivaldi_file_prefix="vivaldi_ios_share_extension_strings_"
    },
  ],
  [
    "//ios/chrome/credential_provider_extension/strings:strings",
    "//vivaldi/app/resources/ios_credential_extension_strings/vivaldi_ios_credential_provider_extension_strings.grd",
    {
      translation_dir_setting = "resources"
      pak_file_prefix="ios_credential_provider_extension_strings_"
      source = "ios_credential_provider_extension_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      vivaldi_file_prefix="vivaldi_ios_credential_provider_extension_strings_"
    },
  ],
  [
    "//ios/chrome/open_extension/strings:strings",
    "//vivaldi/app/resources/ios_open_extension_google_chrome_strings/vivaldi_ios_open_extension_google_chrome_strings.grd",
    {
      translation_dir_setting = "resources"
      pak_file_prefix="ios_open_extension_google_chrome_strings_"
      source = "ios_open_extension_google_chrome_strings.grd"
      vivaldi_translation_dir_setting = "strings"
      vivaldi_file_prefix="vivaldi_ios_open_extension_google_chrome_strings_"
    },
  ],
]

if (is_ios && ios_enable_search_widget_extension) {
  IOS_VIVALDI_RESOURCE_LIST +=
    [
      "//ios/chrome/search_widget_extension/strings:ios_search_widget_extension_branded_strings",
      "//vivaldi/app/resources/ios_search_extension_google_chrome_strings/vivaldi_ios_search_widget_extension_google_chrome_strings.grd",
      {
        translation_dir_setting = "resources"
        pak_file_prefix="ios_search_widget_extension_google_chrome_strings_"
        source = "ios_search_widget_extension_google_chrome_strings.grd"
        vivaldi_translation_dir_setting = "strings"
        vivaldi_file_prefix="vivaldi_ios_search_widget_extension_google_chrome_strings_"
      },
    ]
}

if (is_ios && ios_enable_content_widget_extension) {
  IOS_VIVALDI_RESOURCE_LIST +=
    [
      "//ios/chrome/content_widget_extension/strings:ios_content_widget_extension_branded_strings",
      "//vivaldi/app/resources/ios_content_extension_strings/vivaldi_ios_content_widget_extension_strings.grd",
      {
        translation_dir_setting = "resources"
        pak_file_prefix="ios_content_widget_extension_google_chrome_strings_"
        source = "ios_content_widget_extension_google_chrome_strings.grd"
        vivaldi_translation_dir_setting = "strings"
        vivaldi_file_prefix="vivaldi_ios_content_widget_extension_google_chrome_strings_"
      },
    ]
}

if (is_android) {
  CHROMIUM_VIVALDI_RESOURCE_LIST += ANDROID_VIVALDI_RESOURCE_LIST
  ANDROID_VIVALDI_RESOURCE_LIST = [] # to avoid duplication when extracting
} else if (is_ios) {
  CHROMIUM_VIVALDI_RESOURCE_LIST += IOS_VIVALDI_RESOURCE_LIST
  IOS_VIVALDI_RESOURCE_LIST = [] # to avoid duplication when extracting
}
